# ProyectoTCSW

./: .gitignore  DescripcionProyecto.org  FuncionalidadProyecto.org  Lista de Actividades.org  Readme.org  pyproject.toml
