[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ulises Alexander Arguelles Monjaraz", email = "ulises_alexander_am@protonmail.com"},
]
dependencies = []
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
