[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["Ulises Alexander Arguelles Monjaraz <ulises_alexander_am@protonmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
SQLAlchemy = "^1.4.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
